--- a/Main Page.html
+++ b/Main Page.html
@@ -21,6 +21,7 @@
         </tr>
     </table>
     <h2 id="Title" onmouseover="Title_onmouseover()" onmouseout="Title_onmouseout()">Power And Remainder Calculator</h2>
+    <p id="parDate"></p>
     <script src="JavaCode.js"></script>
 </body>
 </html>
